Updated Credential - Controller, DTO

--- a/keyp/src/main/resources/templates/user-register.html
+++ b/keyp/src/main/resources/templates/user-register.html
@@ -95,7 +95,7 @@
 <div class="auth-container">
     <h2 class="auth-title">Create Your Account</h2>
 
-    <form th:action="@{/users/register}" th:object="${user}" method="post" novalidate>
+    <form th:action="@{/public/register}" th:object="${user}" method="post" novalidate>
         <!-- Username -->
         <div class="mb-3">
             <label for="username" class="form-label">Username</label>
