--- a/keyp/src/main/resources/templates/error.html
+++ b/keyp/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title th:text="'Error ' + ${status}">Error</title>
+    <title th:text="'Error ' + ${status}">Error - KeyP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
     <style>
