Changes in HTML for proper logout

--- a/keyp/src/main/resources/templates/error.html
+++ b/keyp/src/main/resources/templates/error.html
@@ -61,7 +61,7 @@
         <p><strong>Path:</strong> <span th:text="${path}">N/A</span></p>
         <p><strong>Timestamp:</strong> <span th:text="${timestamp}">N/A</span></p>
     </div>
-    <a href="/" class="btn btn-primary">Back to Home</a>
+    <a href="/home" class="btn btn-primary">Back to Home</a>
 </div>
 
 </body>
