--- a/keyp/src/main/resources/templates/login.html
+++ b/keyp/src/main/resources/templates/login.html
@@ -134,7 +134,7 @@
     </form>
 
     <div class="bottom-text mt-3">
-        Don't have an account? <a href="/register">Sign up</a>
+        Don't have an account? <a href="/public/register">Sign up</a>
     </div>
 </div>
 
