--- a/keyp/src/main/resources/templates/credential-form.html
+++ b/keyp/src/main/resources/templates/credential-form.html
@@ -58,7 +58,9 @@
         <a class="navbar-brand" href="#">KeyP</a>
         <div class="d-flex ms-auto">
             <span class="navbar-text text-white me-3">Welcome, <strong th:text="${#authentication.name}">User</strong></span>
-            <a class="btn btn-outline-light btn-sm" href="/logout">Logout</a>
+            <form th:action="@{/logout}" method="post" class="d-inline">
+			    <button type="submit" class="btn btn-outline-light btn-sm">Logout</button>
+			</form>
         </div>
     </div>
 </nav>
